- Customize the login panel by CSS definitions.
- Update FX.php to fix compatibility with FileMaker Server 12.
- Enable omitting to place the primary key field object on a layout when using FileMaker Server.
- The title of the login panel can be set to property as like "INTERMediatorOnPage.authPanelTitle = "title";".
- [BUG FIX] Fix display unnecessary insert button and delete button on the navigation bar after pressing an "enter" key in the text box of the moving page control on the navigation bar (WebKit browsers only).
- [BUG FIX] Authentication and Authorization for groups.
- [BUG FIX] FileMaker_FX class isolates the FX object to data and auth.
- [BUG FIX] File uploader didn't respond on the message and progress.

Ver.3.8 (2013/8/22)
- The official INTER-Mediator site is http://inter-mediator.org/.
- $scriptPathPrefix and $scriptPathSufix in params.php are obsoleted. Use $callURL to specify the url directly.
- Instance variables in PHP classes are defined with private/protected/public instead of var.
- Some exceptions prints a stack trace to JavaScript console if possible.
- The default timezone can be customized with the variable $defaultTimezone in the params.php file.
- PDO Test cases for each database engine.
- Remove checking OpenSSL PHP extension (because phpseclib doesn't require OpenSSL).
- The 'issuedhash' table for storing challenges of authentication can be use another database.
  This means you can use SQLite for the issuedhash table with FileMaker Server, and accessing can be faster than ever.
  The key to specify the DNS is 'issuedhash-dsn' in 'authentication' key, or $issuedHashDSN in params.php.
- Customize the navigation bar with INTERMediator.navigationSetup = function(){...}.
  You can modify the already existing method as you like.
- The moving page control to the navigation bar (Thanks to Mr. Ito).
- Prevent to show the password in an URL for the FileMaker_FX data class on the debug mode.